Theme Mode added

--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,30 @@
 
 /*
 color codes htmlForwebsite
-#154c79  ----
-#063970  ----
-#abdbe3  ----
-#873e23
-#76b5c5
-#eab676
-#e28743  -----
-#eeeee4  -----
-#1e81b0
+#154c79  ---- sky-900
+#063970  ---- sky-900
+#abdbe3  ---- emerald-200
+#873e23 ----- amber-800
+#76b5c5 -- slate-400
+#eab676 --- orange-300
+#e28743  ----- Orange-400
+#eeeee4  ----- stone-200
+#1e81b0 --- cyan-600
+
+
+
+dark theme
+    #2D3250 - Darkest --- Slate-700
+    #424769 - second dark ---- Slate-600
+    #7077A1 - like Purple
+    #F6B17A - Orange
+
+
+Light Theme
+Neutral-100
+emerald-200
+orange-400
+
 
 */
 
